--- a/allproducts.html
+++ b/allproducts.html
@@ -144,6 +144,10 @@
                 products = data;
                 displayProducts(products);
                 populateCategories(products);
+            })
+            .catch(error => {
+                console.error('Error fetching products:', error);
+                document.getElementById('product-list').innerHTML = '<p>Failed to load products.</p>';
             });
 
         function displayProducts(products) {
@@ -152,15 +156,14 @@
 
             products.forEach(product => {
                 const productTile = document.createElement('div');
-productTile.className = 'product-tile';
-productTile.innerHTML = `
-    <img src="${product.image}" alt="${product.name}" style="width:100%; height:auto; border-radius:10px;">
-    <h3>${product.name}</h3>
-    <p>${product.price}</p>
-    <button class="product-button">Add to Cart</button>
-`;
-productList.appendChild(productTile);
-
+                productTile.className = 'product-tile';
+                productTile.innerHTML = `
+                    <img src="${product.image}" alt="${product.name}" style="width:100%; height:auto; border-radius:10px;">
+                    <h3>${product.name}</h3>
+                    <p>Rs ${product.price.toFixed(2)}</p>
+                    <button class="product-button" onclick="addToCart(${product.id})">Add to Cart</button>
+                `;
+                productList.appendChild(productTile);
             });
         }
 
@@ -215,13 +218,36 @@ productList.appendChild(productTile);
             alert(`${product.name} added to cart!`);
         }
 
-        // Function to update the cart count (optional)
+        // Function to update the cart count in the header
         function updateCartCount() {
             const cart = JSON.parse(localStorage.getItem('cart')) || [];
             const count = cart.reduce((acc, item) => acc + item.quantity, 0);
-            // Update cart count display somewhere on your page if needed
-            console.log(`Cart count: ${count}`);
+            document.getElementById('cart-count').textContent = count;
         }
+
+        // Function to set the current year in the footer
+        function setCurrentYear() {
+            const yearSpan = document.getElementById('year');
+            const currentYear = new Date().getFullYear();
+            yearSpan.textContent = currentYear;
+        }
+
+        // Function to subscribe to the newsletter (Placeholder)
+        function subscribeNewsletter() {
+            const email = document.getElementById('newsletter-email').value;
+            if (email) {
+                alert(`Subscribed with ${email}!`);
+                // Implement actual subscription logic here
+            } else {
+                alert('Please enter a valid email address.');
+            }
+        }
+
+        // Initialize the page
+        document.addEventListener('DOMContentLoaded', () => {
+            setCurrentYear();
+            updateCartCount();
+        });
     </script>
 </body>
 </html>
