--- a/allproducts.html
+++ b/allproducts.html
@@ -134,6 +134,7 @@
         </div>
         <small>&copy; <span id="year"></span> Ecommerce. All rights reserved.</small>
     </footer>
+    <script src="common.js"></script>
     <script>
         let products = [];
 
