--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         </div>
         <small>&copy; <span id="year"></span> Ecommerce. All rights reserved.</small>
     </footer>
-
+    <script src="common.js"></script>
     <script>
         // Function to fetch and display products
         async function loadProducts() {
