--- a/checkout.html
+++ b/checkout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout - E-Commerce</title>
-    <link rel="stylesheet" href="styles.css"> <!-- External CSS (optional) -->
+    <link rel="stylesheet" href="index.css"> <!-- External CSS (optional) -->
     <style>
         /* Global Styles */
         body {
